Fix troop selector being out of frame on mobile

--- a/resources/base.css
+++ b/resources/base.css
@@ -450,7 +450,7 @@ dialog:not([open]) {
 
 .layout-window {
 	position: absolute;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	padding: 2em;
 }
